bind/contrib/manifests/example-backend/letsencrypt/example-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-backend
  labels:
    app: example-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: example-backend
    spec:
      serviceAccountName: example-backend
      containers:
        - name: example-backend
          image: public.ecr.aws/w5n9a2g2/klutch/example-backend:v1.4.0
          imagePullPolicy: Always
          args:
            - --namespace-prefix=cluster
            - --pretty-name=MangoDB
            - --consumer-scope=Namespaced
            - --oidc-issuer-client-id=$(OIDC-ISSUER-CLIENT-ID)
            - --oidc-issuer-client-secret=$(OIDC-ISSUER-CLIENT-SECRET)
            - --oidc-issuer-url=$(OIDC-ISSUER-URL)
            - --oidc-authorize-url=$(OIDC-AUTHORIZE-URL)
            - --oidc-callback-url=$(OIDC-CALLBACK-URL)
            - --listen-address=0.0.0.0:8080
            - --external-address=https://api.mangodb.de
            - --external-ca-file=/etc/tls/ca.crt
            - --external-server-name=78615b03-d644-4fb7-8395-8a60efd388f2.k8s.ondigitalocean.com
            - --cookie-signing-key=$(COOKIE-SIGNING-KEY)
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: '100m'
              memory: 256Mi
          volumeMounts:
          - name: kube-bind-ca
            mountPath: /etc/tls
            readOnly: true
      volumes:
        - name: oidc-config
          configMap:
            name: oidc-config
        - name: oidc-secret
          secret:
            secretName: oidc-config
        - name: kube-bind-ca
          secret:
            secretName: kube-bind-ca
---
apiVersion: v1
kind: Service
metadata:
  name: example-backend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: example-backend
      port: 80
      targetPort: 8080
  selector:
    app: example-backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example-backend-envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-backend-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: example-backend-envoy-gateway
  listeners:
  - name: http
    hostname: "mangodb.de"
    protocol: HTTP
    port: 80
  - name: https
    hostname: "mangodb.de"
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: mangodb-tls   # cert-manager will create/update this Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-backend
spec:
  hostnames:
  - "mangodb.de"
  parentRefs:
  - name: example-backend-gateway
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: example-backend
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /dex
    backendRefs:
    - name: dex
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-backend-redirect
spec:
  hostnames:
  - "mangodb.de"
  parentRefs:
  - name: example-backend-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 308
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    app: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dex
    spec:
      containers:
      - name: dex
        image: ghcr.io/dexidp/dex:latest-distroless
        args:
        - dex
        - serve
        - /etc/dex/config.yaml
        resources:
          limits:
            cpu: '2'
            memory: 2Gi
          requests:
            cpu: '100m'
            memory: 256Mi
        volumeMounts:
        - name: dex-config
          mountPath: /etc/dex
          readOnly: true
        - name: mangodb-tls
          mountPath: /etc/tls
          readOnly: true
      volumes:
      - name: dex-config
        secret:
          secretName: dex-config
      - name: mangodb-tls
        secret:
          secretName: mangodb-tls
---
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    name: dex
    port: 80
    targetPort: 5556
  selector:
    app: dex
